--- a/src/main/webapp/WEB-INF/view/main.html
+++ b/src/main/webapp/WEB-INF/view/main.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body{
+            background: chartreuse;
+        }
+    </style>
 </head>
 <body>
+
+<h2>登陆成功</h2>
 
 </body>
 </html>
