--- a/src/main/webapp/WEB-INF/view/boss/information.html
+++ b/src/main/webapp/WEB-INF/view/boss/information.html
@@ -30,11 +30,11 @@
             success(data){
                 //测试
               //  console.log(data)
-                let {account,name,phone,jobTime} = data.data;
+                let {account,name,phone,date} = data.data;
                 document.querySelector("#information .account>span").innerHTML = account;
                 document.querySelector("#information .name>span").innerHTML = name;
                 document.querySelector("#information .phone>span").innerHTML = phone;
-                document.querySelector("#information .jobTime>span").innerHTML = jobTime;
+                document.querySelector("#information .jobTime>span").innerHTML = date;
 
             }
         })
