--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -60,20 +60,24 @@
             </div>
         </div>
         <div class="login_body">
-            <form>
+            <form id="loginInSys">
 
                 <div class="username">
 
-                        <input type="text" name="account" placeholder="please input account" value="">
+                        <input id="account" type="text" name="account" placeholder="please input account" value=""
+                        maxlength="16" required>
                 </div>
                 <div class="password">
-                        <input type="text" name="password" placeholder="please input password" value="">
+                        <input id="password" type="text" name="password" placeholder="please input password" value=""
+                        minlength="3" maxlength="16" required>
                 </div>
                 <div class="login_btn" >
-                    <input type="button" onclick="_login()" value="login">
+                    <button type="submit" onclick="_login()" value="login">
+                        登录
+                    </button>
                 </div>
                 <div class="title">
-                    <p style="color: red">  </p>
+                    <p id="error-message" style="color: red">  </p>
                 </div>
 
             </form>
@@ -82,6 +86,11 @@
 </div>
 <script src="/static/js/jQuery-2.1.1.js"></script>
 <script>
+    $(document).ready(function (){
+        $("#loginInSys").submit(function (event){
+            event.preventDefault();
+        })
+    })
     function _login(){
         //获取输入信息  账号和密码
         let account = document.querySelector(".username>input[name='account']").value;
@@ -107,6 +116,7 @@
             }else {
                 let title = document.querySelector(".title>p");
                 title.innerHTML = data.message;
+                $('#error-message').text('登录失败：' + data.message);
             }
             }
         })
