--- a/src/main/webapp/WEB-INF/view/admin/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/list.html
@@ -1,36 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" http-equiv="content-type" content="text/html">
+<!--    <link href="static/css/demo.css" rel="stylesheet" type="text/css" />-->
+    <script src="/static/miniui/boot.js"></script>
     <title>Title</title>
 </head>
 <body>
+<div style="padding-top:5px;padding-bottom:5px;">
+    <input type="button" value="Remove" onclick="_removeRow()" />
+    <input type="button" value="Save" onclick="saveData()" style="margin-left:50px;"/>
+</div>
 <div style="padding-bottom:5px;">
     <span>输入手机号查找：</span><input type="text" id="key-phone"/>
     <input type="button" value="查找" onclick="_searchPhone()"/>
     <input type="button" value="重新加载" onclick="_reload()"/>
 </div>
 <div id="admin-list" class="mini-datagrid" style="width: 100%;height: 400px;" url="/admin/list"
-     idField="adminId"
+     idField="adminId" ARIA-MULTISELECTABLE="true" allowResize="true"
      sizeList="[5,10]" pageSize="5" showHeader="true" title="员工列表">
+
     <div property="columns">
-        <div type="indexcolumn"></div>
-        <div field="empId" sortField="ADMIN_ID" allowSort="true" width="120" headerAlign="center">员工编码</div>
+<!--        <div type="indexcolumn"></div>-->
+        <div type="checkcolumn" width="50">check</div>
+        <div field="empId"  width="120" headerAlign="center">员工编码</div>
         <div field="name" width="120" headerAlign="center">姓名</div>
         <div field="account" width="100" headerAlign="center">账号</div>
         <div field="phone" width="100" headerAlign="center">手机号</div>
         <div field="hireDate" width="100" headerAlign="center" dateformat="yyyy-MM-dd">入职日期</div>
         <div field="sal" width="100" headerAlign="center">薪资待遇</div>
+        <div sortField="hireDate" allowSort="true" field="Operate" width="100" headeralign="center">操作</div>
     </div>
 
 </div>
 
-<script src="/static/miniui/boot.js"></script>
+<fieldset style="width:700px;border:solid 1px #aaa;margin-top:8px;position:relative;">
+    <legend>大师信息</legend>
+    <div id="editForm1" style="padding:5px;">
+        <input class="mini-hidden" name="id"/>
+        <table style="width:100%;">
+            <tr>
+                <td style="width:100px;">大师姓名：</td>
+                <td style="width:150px;"><input id="name" name="name" class="mini-textbox" /></td>
+                <td style="width:100px;">手机号：</td>
+                <td style="width:150px;"><input id="phone" name="phone" class="mini-textbox" /></td>
+                <td style="width:100px;">任职年龄：</td>
+                <td style="width:250px;"><input id="hireDateT" name="hireDate" class="mini-textbox" /></td>
+            </tr>
+            <div>
+                <p>此员工八字为</p>
+                <div class="Mtyear"><span></span>-</div>
+                <div class="Mtmonth"><span></span>-</div>
+                <div class="Mtday"><span></span>-</div>
+                <div class="Mthour"><span></span></div>
+            </div>
+        </table>
+    </div>
+</fieldset>
+
+
 <script src="/static/js/jQuery-2.1.1.js"></script>
 <script>
   mini.parse();
   let dataGrid = mini.get("admin-list");
+  let adminForm = new mini.Form("admin-list");
+
   dataGrid.load();
+  //绑定表单
+  let db = new mini.DataBinding();
+  db.bindForm("editForm1", dataGrid);
 
   function _searchPhone() {
     let phone = $("#key-phone").val();
@@ -40,6 +78,34 @@
   function _reload() {
     dataGrid.load();
   }
+  let data = adminForm.getData(true);
+  console.log(data);
+  console.log(dataGrid);
+  console.log(db)
+
+    function _removeRow(){
+        let hireDateT = $("#hireDateT").val();
+        console.log(hireDateT)
+        jQuery.ajax({
+            url: "/admin/removeEmp",
+            method: "post",
+                data:{hireDateT},
+        dataType: "json",
+            success(resp) {
+            if (resp.flag) {
+                mini.showTips({
+                    content: resp.message,
+                    state: "success",      //default|success|info|warning|danger
+                    x: "center",          //left|center|right
+                    y: "top",          //top|center|bottom
+                    timeout: 2000     //自动消失间隔时间。默认2000（2秒）
+                })
+        }}
+    })
+    }
+    function saveData(){
+      dataGrid.save();
+    }
 </script>
 </body>
 </html>
