--- a/src/main/webapp/WEB-INF/view/emp/listUser.html
+++ b/src/main/webapp/WEB-INF/view/emp/listUser.html
@@ -17,12 +17,8 @@
     <div class="mini-toolbar" style="border-bottom:0;padding:0px;">
         <table style="width:100%;">
             <tr>
-                <td style="width:100%;">
-                    <a class="mini-button" iconCls="icon-add" onclick="edit()">编辑</a>
-                    <a class="mini-button" iconCls="icon-remove" onclick="remove()">删除</a>
-                </td>
                 <td style="white-space:nowrap;">
-                    <input id="key" class="mini-textbox" emptyText="请输入产品名" style="width:150px;" onenter="onKeyEnter"/>
+                    <input id="key" class="mini-textbox" emptyText="请输入姓名" style="width:150px;" onenter="onKeyEnter"/>
                     <a class="mini-button" onclick="search()">查询</a>
                 </td>
             </tr>
@@ -30,20 +26,20 @@
     </div>
 </div>
 <div id="datagrid1" class="mini-datagrid" style="width:800px;height:280px;" allowResize="true"
-     url="/product/list"  idField="id" multiSelect="true"
+     url="/boss/listUser"  idField="id" multiSelect="true"
 >
     <div property="columns">
         <!--<div type="indexcolumn"></div>        -->
         <div type="checkcolumn" ></div>
-        <div field="id" width="120" headerAlign="center" allowSort="true">产品编码</div>
-        <div field="name" width="120" headerAlign="center" allowSort="true">产品名</div>
-<!--        <div field="createtime" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">创建日期</div>-->
+        <div field="id" width="120" headerAlign="center" allowSort="true">用户编码</div>
+        <div field="name" width="120" headerAlign="center" allowSort="true">出生日期</div>
+        <!--        <div field="createtime" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">创建日期</div>-->
         <div header="基本信息">
             <div property="columns">
-                <div field="price" width="100" renderer="onGenderRenderer">价格</div>
-                <div field="inventory" width="100" allowSort="true">库存</div>
-                <div field="kind" width="100" renderer="onBirthdayRenderer">种类</div>
-                <div field="action" width="100">功效</div>
+                <div field="price" width="100" renderer="onGenderRenderer">用户名</div>
+<!--                <div field="inventory" width="100" allowSort="true">库存</div>-->
+<!--                <div field="kind" width="100" renderer="onBirthdayRenderer">种类</div>-->
+                <div field="action" width="100">联系该用户</div>
             </div>
         </div>
     </div>
